// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./Pus012MonitoringCheckProperties.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus012ParameterMonitoringDefinition {
extensions 19 to 119;

  optional ccsds_mal.protobuf.UINTEGER monitoringId = 1;
  optional ccsds_mal.protobuf.UINTEGER parameterId = 2;
  optional ccsds_mal.protobuf.UINTEGER validityParameterId = 3;
  optional ccsds_mal.protobuf.STRING validityParameterMask = 4;
  optional ccsds_mal.protobuf.STRING parameterCurrentValue = 5;
  optional ccsds_mal.protobuf.STRING validityParameterExpectedValue = 6;
  optional ccsds_mal.protobuf.UINTEGER monitoringInterval = 7;
  optional ccsds_mal.protobuf.UINTEGER repetitionNumber = 8;
  optional ccsds_mal.protobuf.UINTEGER checkType = 9;
  optional ccsds_mal.protobuf.UINTEGER monitoringStatus = 10;
  optional pusGroundModel.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesLow = 11;
  optional pusGroundModel.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesHigh = 12;
  optional pusGroundModel.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesExpected = 13;
  optional pusGroundModel.protobuf.PusElement pusElement = 14;
  optional ccsds_mal.protobuf.STRING monitoringIdLabel = 15;
  optional ccsds_mal.protobuf.STRING protectionStatus = 16;
  optional ccsds_mal.protobuf.BOOLEAN isMonitoringIntervalSet = 17;
  optional ccsds_mal.protobuf.BOOLEAN isRepetitionNumberSet = 18;
}
